# yt2navidrome

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: main.yml
yt2navidrome/: .env.example  __init__.py  config.py  main.py
yt2navidrome/commands/: __init__.py  download.py  edit.py
yt2navidrome/data/: cookies.txt.md
yt2navidrome/downloader/: __init__.py  common.py  metadata.py  models.py  playlist.py  video.py
yt2navidrome/template/: __init__.py  models.py  reader.py
yt2navidrome/template/models/: __init__.py  argument.py  metadataparser.py  postprocessor.py  template.py
yt2navidrome/utils/: banner.py  deno_installer.py  ffmpeg_installer.py  output_helper.py
yt2navidrome/utils/ffmpeg/: __init__.py  helper.py  installer.py
yt2navidrome/utils/logging/: __init__.py  logging.conf  setup.py
